fixes collapse CSS transitions for both table and tabs layout

--- a/src/styles/mortgage-schedule.css
+++ b/src/styles/mortgage-schedule.css
@@ -13,7 +13,15 @@
   }
 
   .mortgage-schedule--table {
-
+    .sub-grid-wrapper {
+      @supports not (interpolate-size: allow-keywords) {
+        max-height: 75vh;
+        overflow: scroll;
+      }
+      @supports (interpolate-size: allow-keywords) {
+        max-height: calc-size(max-content, size + 1px);
+      }
+    }
   } /* END .mortgage-schedule--table */
 
   .mortgage-schedule--tabs {
@@ -27,9 +35,9 @@
       border-bottom: 0;
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
-
+      background-color: white;
       font-weight: bolder;
-
+      transition: all 0.4s ease;
     }
     .year-tab.active {
       background-color: var(--turquoise);
@@ -55,7 +63,7 @@
 
   .yearly-summary-header span:first-child {
     text-align: left;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
   }
 
   .yearly-summary-header span:not(:first-child) {
@@ -82,6 +90,11 @@
     display: grid;
     grid-column: 1 / -1;
     grid-template-columns: subgrid;
+    color: black;
+    overflow: hidden;
+    opacity: 1;
+
+    transition: all 0.4s ease;
   }
 
   .sub-grid {
@@ -92,8 +105,8 @@
     grid-auto-flow: column;
     text-align: right;
   }
-  .collapsed {
-    height: 0;
-    visibility: hidden;
+  .mortgage-schedule .collapsed {
+    max-height: 0;
+    opacity: 0;
   }
 }
